Switch to Supabase backend and database
- Replace MySQL schema with Supabase Postgres (uuid PKs, text+check constraints, jsonb)
- Add full RLS policies for all user-data tables
- Add auto-create profile trigger on auth.users signup
- Update .env.example files for Supabase (URL + anon key / service role key)
- Remove Express/MySQL/JWT references from env config
- Update README with full Supabase project spec, architecture, and setup instructions
- Simplify root package.json (no backend dev server needed)
- Harden .gitignore to cover backend/.env and frontend/.env

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 # Dependencies
 node_modules/
 
-# Environment files
+# Environment files (never commit secrets)
 .env
 .env.local
 .env.production
+backend/.env
+frontend/.env
 
 # Build output
 client/dist/
