--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,12 +1,6 @@
-PORT=5001
+# Supabase (service role key — server-side only, never expose to client)
+SUPABASE_URL=https://your-project-id.supabase.co
+SUPABASE_SERVICE_ROLE_KEY=your-supabase-service-role-key
+
+# Only needed if you run admin scripts or seed data server-side
 NODE_ENV=development
-
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=
-DB_NAME=mastery
-
-JWT_SECRET=mastery-secret-key-cs491
-JWT_EXPIRES_IN=7d
-
-CLIENT_URL=http://localhost:5173
