--- a/.gitignore
+++ b/.gitignore
@@ -5,12 +5,10 @@ node_modules/
 .env
 .env.local
 .env.production
-backend/.env
 frontend/.env
 
 # Build output
-client/dist/
-server/dist/
+frontend/dist/
 
 # Logs
 *.log
