--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
   "scripts": {
     "dev": "npm --prefix frontend run dev",
     "install:all": "npm install && npm --prefix frontend install",
-    "build": "npm --prefix frontend run build"
-  },
-  "devDependencies": {
-    "concurrently": "^9.1.2"
+    "build": "npm --prefix frontend run build",
+    "lint": "npm --prefix frontend run lint"
   }
 }
