--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,2 +1,3 @@
+# get these from your Supabase project dashboard -> Settings -> API
 VITE_SUPABASE_URL=https://your-project-id.supabase.co
 VITE_SUPABASE_ANON_KEY=your-supabase-anon-key
